--- a/heat_demand.ipynb
+++ b/heat_demand.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the required libraries."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -54,10 +61,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [],
    "source": [
-    "#sets up Seaborn parametes for plotting\n",
+    "#set up Seaborn parametes for plotting\n",
     "def snsParams(font, color_scheme):\n",
     "    #seaborn.set(context='notebook', style='darkgrid', palette='deep', font='sans-serif', font_scale=1, color_codes=True, rc=None)\n",
     "    sns.set(style = 'whitegrid', palette = color_scheme, font_scale = font)\n",
@@ -418,7 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Incredibly, there is no missing data. (Data was preprocessed before doing this exercise)."
+    "Incredible! There is no missing data. (Data was preprocessed before doing this exercise)."
    ]
   },
   {
@@ -2062,6 +2073,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
