--- a/heat_demand.ipynb
+++ b/heat_demand.ipynb
@@ -55,41 +55,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Helper functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "tags": [
-     "hide_input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "#set up Seaborn parametes for plotting\n",
-    "def snsParams(font, color_scheme):\n",
-    "    #seaborn.set(context='notebook', style='darkgrid', palette='deep', font='sans-serif', font_scale=1, color_codes=True, rc=None)\n",
-    "    sns.set(style = 'whitegrid', palette = color_scheme, font_scale = font)\n",
-    "\n",
-    "#makes heat map of correllations\n",
-    "def PlotCorr(X):\n",
-    "    corr = X.corr()\n",
-    "    #fig , ax = plt.figure( figsize = (6,6 ) )\n",
-    "    cmap = sns.diverging_palette( 220 , 10 , as_cmap = True )\n",
-    "    sns.heatmap(\n",
-    "        corr, cmap = cmap, square = True, cbar = False, cbar_kws = { 'shrink' : 1 }, \n",
-    "     annot = True, annot_kws = { 'fontsize' : 12 }\n",
-    "    )\n",
-    "    plt.yticks(rotation = 0)\n",
-    "    plt.xticks(rotation = 90) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Load data"
    ]
   },
@@ -108,6 +73,38 @@
     "# Divide data into X and Y data\n",
     "data_X = pd.DataFrame(data.iloc[:,:-1])\n",
     "data_y = pd.DataFrame(data.iloc[:,-1:n_cols])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Some helper functions\n",
+    "\"\"\"\n",
+    "\n",
+    "# Set up Seaborn parametes for plotting\n",
+    "def snsParams(font, color_scheme):\n",
+    "    #seaborn.set(context='notebook', style='darkgrid', palette='deep', font='sans-serif', font_scale=1, color_codes=True, rc=None)\n",
+    "    sns.set(style = 'whitegrid', palette = color_scheme, font_scale = font)\n",
+    "\n",
+    "#makes heat map of correllations\n",
+    "def PlotCorr(X):\n",
+    "    corr = X.corr()\n",
+    "    #fig , ax = plt.figure( figsize = (6,6 ) )\n",
+    "    cmap = sns.diverging_palette( 220 , 10 , as_cmap = True )\n",
+    "    sns.heatmap(\n",
+    "        corr, cmap = cmap, square = True, cbar = False, cbar_kws = { 'shrink' : 1 }, \n",
+    "     annot = True, annot_kws = { 'fontsize' : 12 }\n",
+    "    )\n",
+    "    plt.yticks(rotation = 0)\n",
+    "    plt.xticks(rotation = 90) "
    ]
   },
   {
@@ -514,7 +511,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -556,7 +557,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -765,7 +770,10 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "hide_input"
+    ]
    },
    "outputs": [
     {
@@ -985,7 +993,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1043,7 +1055,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1105,7 +1121,11 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1331,7 +1351,11 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1399,7 +1423,10 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "hide_input"
+    ]
    },
    "outputs": [
     {
@@ -1502,7 +1529,11 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1600,7 +1631,11 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1688,7 +1723,10 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "code_folding": []
+    "code_folding": [],
+    "tags": [
+     "hide_input"
+    ]
    },
    "outputs": [
     {
@@ -1774,7 +1812,11 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1861,7 +1903,11 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1946,7 +1992,11 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
