--- a/heat_demand.ipynb
+++ b/heat_demand.ipynb
@@ -10,20 +10,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load the required libraries."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Load Packages\n",
-    "import numpy as np # linear algebra\n",
+    "\"\"\"Load the required libraries\"\"\"\n",
+    "\n",
+    "import numpy as np\n",
     "import matplotlib as mpl\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -52,18 +46,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Load Data\"\"\"\n",
+    "\n",
     "# Get data from csv\n",
     "data = pd.read_csv(\"../santboi/data/1906SB_collection_heatd.csv\")\n",
     "\n",
@@ -85,9 +74,7 @@
    },
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Some helper functions\n",
-    "\"\"\"\n",
+    "\"\"\"Some helper functions\"\"\"\n",
     "\n",
     "# Set up Seaborn parametes for plotting\n",
     "def snsParams(font, color_scheme):\n",
@@ -2123,7 +2110,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
