Add meme at the end of the notebook

--- a/models.ipynb
+++ b/models.ipynb
@@ -3748,6 +3748,8 @@
     "* A model to classify buildings regarding their potential to be susceptible of an renovation. This would have to be done taking into account all kind of variables to avoid producing models which impair some individuals in favour of others.\n",
     "* A model to detect errors in building data collection. This way the procedure of data collection for institutions like the Cadastre could become less resource intensive.\n",
     "\n",
+    "![](img/know.jpeg)\n",
+    "\n",
     "<a id='references'></a>\n",
     "# References\n",
     "\n",
