--- a/blog_short.ipynb
+++ b/blog_short.ipynb
@@ -4,11 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Goals\n",
+    "The goal of this exercise is to go through the Machine Learning modeling process using Python.\n",
+    "\n",
+    "I'll recover the dataset I used in [this]() and [this]() blog posts about energy savings in the building renovation. Check them for further context.\n",
+    "\n",
+    "The Machine Learning End-2-end process consists of the following steps:\n",
+    "\n",
+    "+ Selecting the performance measure\n",
+    "+ Checking the modeling assumptions\n",
+    "+ Quick exploration of data\n",
+    "+ Creating the test set\n",
+    "+ Exploring the data visually to gain insights\n",
+    "+ Attribute combination A.K.A. Feature Engineering\n",
+    "+ Preparing the data for ML models\n",
+    "+ Model selection and training, and finally\n",
+    "+ Model testing\n",
+    "\n",
+    "I'll drive you through each of the steps, going into enough detail to give you a general idea of how each works.\n",
     "\n",
     "## Performance measure\n",
     "\n",
-    "The performance measure is an indicator that gives an idea of how much error the system tipically makes in its predictions. It is well defined in the picture bellow.\n",
+    "The performance measure is an indicator that gives an idea of how much error the system makes in its predictions. It is well defined in the picture below.\n",
     "\n",
     "![](img/error.png)\n",
     "\n",
@@ -20,7 +36,7 @@
     "\n",
     "* $X$ is the matrix containing all the features, excluding the label or target variable\n",
     "* $h$ is the hypothesis, i.e., the model function\n",
-    "* $m$ is the length of the dataset, i.e., the number of instances or builgings in it\n",
+    "* $m$ is the length of the dataset, i.e., the number of instances or buildings in it\n",
     "* $x^{(i)}$ is a vector of all the feature values (excluding the label) of the $i^{th}$ instance in the dataset. Hence, $h(x^{(i)})$ gives us the \"predicted $y$\"\n",
     "* $y$ is the real target value\n",
     "\n",
@@ -30,24 +46,24 @@
     "\n",
     "The data available have many limitations, mainly:\n",
     "* the target variable is biased and is hypothetical, \n",
-    "* there are many errors and outliers derived from how data were collected. \n",
+    "* there are errors and outliers derived from the data collection process\n",
     "\n",
-    "However, this is an opportunity to discuss the potential of Machine Learning in the context of sustainable urban planning and the necessity of open and high quality data to make informed decisions and favour sustainablity and governance. \n",
+    "However, this is an opportunity to discuss the potential of Machine Learning in the context of sustainable urban planning and the necessity of open and high-quality data to make informed decisions and favor sustainability and governance. \n",
     "\n",
-    "Thus, it is asumed that the energy consumption variable is real rather than an estimation.\n",
+    "Thus, it is assumed that the energy consumption variable is real rather than an estimation.\n",
     "\n",
-    "It is assumed that anyone that reach this notebook will have some basic familiarity with python and Machine Learning. Just in case, it is going to be written to be as accessible as possible to someone with little to no knoweledge to them.\n",
+    "It is assumed that anyone that reaches this notebook will have some basic familiarity with python and Machine Learning. Anyhow, I'll try to do it as accessible as possible to someone with little to no knowledge to them.\n",
     "\n",
     "![](img/ml-explained.jpeg)\n",
     "\n",
-    "Sometimes, variables are refered as attributes or features, being attributes the prefered one.\n",
+    "Sometimes, variables are referred to as \"attributes\" or \"features\" while \"attributes\" is the preferred one.\n",
     "\n",
     "## Configuration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +109,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ORIGINAL DATA:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 814 entries, 0 to 813\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   X Coord                    746 non-null    float64\n",
+      " 1   Y Coord                    746 non-null    float64\n",
+      " 2   District                   814 non-null    object \n",
+      " 3   Year                       814 non-null    int64  \n",
+      " 4   Main Orientation           814 non-null    object \n",
+      " 5   GF Usage                   814 non-null    object \n",
+      " 6   Roof Surface               814 non-null    float64\n",
+      " 7   Facade Surface             814 non-null    float64\n",
+      " 8   Openings Surface           814 non-null    float64\n",
+      " 9   Wrapping Surface           814 non-null    float64\n",
+      " 10  Party Wall Surface         814 non-null    float64\n",
+      " 11  Contact w/Terrain Surface  814 non-null    float64\n",
+      " 12  Type of Roof               814 non-null    object \n",
+      " 13  Type of Opening            814 non-null    object \n",
+      " 14  Type of Party Wall         814 non-null    object \n",
+      " 15  Type of Facade             814 non-null    object \n",
+      " 16  Number of Floors           814 non-null    int64  \n",
+      " 17  Number of Courtyards       814 non-null    int64  \n",
+      " 18  Number of Dwellings        814 non-null    int64  \n",
+      " 19  Heat Demand                814 non-null    float64\n",
+      "dtypes: float64(9), int64(4), object(7)\n",
+      "memory usage: 127.3+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "print('ORIGINAL DATA:')\n",
     "buildings.info(null_counts=True)"
@@ -111,9 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -687,6 +736,7 @@
    "source": [
     "Now we can observe some peculiarities in data:\n",
     "\n",
+    "* Two numerical attributes, `Number of Courtyards` and `Number of floors`, shall be considered as categorical or numeric\n",
     "* Most buildings have 2 or 5 heights\n",
     "* Many distributions are _tail-heavy_\n",
     "* The Attributes have different scales\n",
@@ -1021,7 +1071,7 @@
     "\n",
     "As there is only one instance from the year 1700, it is removed from the plots to get a better idea of the patterns.\n",
     "\n",
-    "**[REVIEW: REMOVE CAT VARIABLES]**"
+    "**[REVIEW: REMOVE CAT VARIABLES, MAYBE SELECT OTHER ONES]**"
    ]
   },
   {
@@ -1092,9 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1286,9 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2026,9 +2072,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2103,9 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2892,9 +2934,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3022,9 +3062,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3316,9 +3354,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3704,9 +3740,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (hands-on_ml)",
+   "display_name": "Python (santboi)",
    "language": "python",
-   "name": "hands-on_ml"
+   "name": "santboi"
   },
   "language_info": {
    "codemirror_mode": {
